[FIX] mail: remove collapse/expand panel functionality
Purpose of this commit is to remove the collapse/expand functionality.

task-4448888

--- a/addons/mail/static/src/core/public_web/discuss_sidebar.scss
+++ b/addons/mail/static/src/core/public_web/discuss_sidebar.scss
@@ -1,42 +1,23 @@
 .o-mail-DiscussSidebar {
     box-shadow: 1px 0px 6px -3px rgba(50, 50, 50, 0.15);
-    width: 60px;
+    width: $o-mail-Discuss-inspector;
     --border-opacity: .5;
-
-    &:not(.o-compact) {
-        width: $o-mail-Discuss-inspector;
-    }
 }
 
 .o-mail-DiscussSidebar-optionsBtn {
     --border-opacity: 0.5;
     padding: map-get($spacers, 1) / 2;
-
-    &:not(.o-compact) {
-        right: map-get($spacers, 2) + map-get($spacers, 1);
-    }
+    right: map-get($spacers, 2) + map-get($spacers, 1);
 }
 
 .o-mail-DiscussSidebar-badge {
     padding: 3px 4px;
-
-    &.o-compact {
-        right: -2px;
-    }
 }
 
 .o-mail-DiscussSidebar-item {
     outline: 1px solid transparent !important;
     padding-top: map-get($spacers, 1) / 2;
     padding-bottom: map-get($spacers, 1) / 2;
-
-    .o-mail-DiscussSidebar.o-compact & {
-        opacity: 75%;
-
-        &.o-unread, &.o-active, &:hover {
-            opacity: 100%;
-        }
-    }
 
     &.o-active, &:hover {
         background-color: var(--mail-DiscussSidebar-itemActiveBgColor, mix($o-view-background-color, $o-action, 90%)) !important;
